separate exporters to log and file (#801)